# virtual-machine

./: Flatten.hs  IdMap.hs  Instruction.hs  Main.hs  Node.hs  Optimize.hs  Parse.hs  README  Run.hs  Types.hs  Unflatten.hs  Utils.hs  euler-3.sbc  fib.sbc  virtual-machine.cabal
Optimize/: ConstantFolding.hs  Liveness.hs
reference/: SimpleRegisterMachine.cs
